# Firefly

./: .gitmodules  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Shaders/: compile.bat  shader.vert
Engine/Source/Core/: CMakeLists.txt
Engine/Source/Core/Private/: Firefly.cpp  Scene.cpp
Engine/Source/Core/Public/: Firefly.h  Scene.h
Game/: CMakeLists.txt
Game/Source/: main.cpp
